# Arcade

./: CMakeLists.txt  README.md  build.sh  clean.sh
doc/: Doxyfile
doc/html/: AllModules_8hpp.html  AllModules_8hpp.js  AllModules_8hpp__incl.map  AllModules_8hpp__incl.md5  AllModules_8hpp_source.html  CacheManager_8hpp.html  CacheManager_8hpp.js  CacheManager_8hpp__incl.map  CacheManager_8hpp__incl.md5  CacheManager_8hpp_source.html  Color_8hpp.html  Color_8hpp.js  Color_8hpp__dep__incl.map  Color_8hpp__dep__incl.md5  Color_8hpp_source.html  EventManager_8hpp.html  EventManager_8hpp.js  EventManager_8hpp__incl.map  EventManager_8hpp__incl.md5  EventManager_8hpp_source.html  Events_8hpp.html  Events_8hpp.js  Events_8hpp__dep__incl.map  Events_8hpp__dep__incl.md5  Events_8hpp__incl.map  Events_8hpp__incl.md5  Events_8hpp_source.html  GUI_8hpp.html  GUI_8hpp.js  GUI_8hpp__dep__incl.map  GUI_8hpp__dep__incl.md5  GUI_8hpp__incl.map  GUI_8hpp__incl.md5  GUI_8hpp_source.html  IDisplayModule_8hpp.html  IDisplayModule_8hpp.js  IDisplayModule_8hpp__dep__incl.map  IDisplayModule_8hpp__dep__incl.md5  IDisplayModule_8hpp__incl.map  IDisplayModule_8hpp__incl.md5  (+250 more)
doc/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  (+46 more)
src/: Main.cpp
src/core/: Core.cpp  Core.hpp  EventManager.cpp  EventManager.hpp
src/core/menu/: Menu.cpp  Menu.hpp  MenuDisplay.cpp  MenuEvents.cpp  MenuEvents.hpp
src/core/score/: HighScoreManager.cpp  HighScoreManager.hpp
src/error/: Error.hpp  ErrorMessages.hpp
src/events/: Events.hpp  EventsSystem.hpp  Listener.hpp
src/games/: IGameModule.hpp
src/games/minesweeper/: MineSweeperCell.cpp  MineSweeperCell.hpp  MineSweeperEvents.cpp  MineSweeperEvents.hpp  MineSweeperTimer.hpp  Minesweeper.cpp  Minesweeper.hpp  MinesweeperEntryPoint.cpp
src/games/pacman/: Map.cpp  Map.hpp  Pacman.cpp  Pacman.hpp  PacmanEntryPoint.cpp  PacmanEvent.cpp  PacmanEvent.hpp
src/games/snake/: Food.cpp  Food.hpp  Snake.cpp  Snake.hpp  SnakeEntryPoint.cpp  SnakeEvents.cpp  SnakeEvents.hpp  Wall.cpp  Wall.hpp
src/graphics/: IDisplayModule.hpp
src/graphics/cache/: CacheManager.hpp
src/graphics/color/: Color.hpp
src/graphics/objects/: Shapes.cpp  Shapes.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/graphics/transform/: Position.cpp  (+5 more)
src/loader/: Loader.cpp  Loader.hpp  ModuleManager.cpp  ModuleManager.hpp
src/plugin/: IModule.hpp  Plugin.cpp  Plugin.hpp
(+13 files in other folders)
